--- a/NJDYSearchBarView/Classes/NJDYSearchBarView.xib
+++ b/NJDYSearchBarView/Classes/NJDYSearchBarView.xib
@@ -46,7 +46,7 @@
                                 <constraint firstAttribute="width" constant="44" id="TzZ-JU-F4n"/>
                                 <constraint firstAttribute="height" constant="44" id="omX-6Y-6So"/>
                             </constraints>
-                            <state key="normal" image="Image_my_history"/>
+                            <state key="normal" image="image_my_history"/>
                             <state key="highlighted" image="Image_my_history_click"/>
                         </button>
                     </subviews>
@@ -74,7 +74,7 @@
         </view>
     </objects>
     <resources>
-        <image name="Image_my_history" width="16" height="16"/>
         <image name="Image_my_history_click" width="22" height="22"/>
+        <image name="image_my_history" width="26" height="26"/>
     </resources>
 </document>
