--- a/NJDYSearchBarView/Classes/NJDYSearchBarView.xib
+++ b/NJDYSearchBarView/Classes/NJDYSearchBarView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -39,6 +39,9 @@
                             <state key="highlighted" image="Image_my_history_click">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
+                            <connections>
+                                <action selector="msgClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="qvv-lo-OHW"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ggn-47-nCt">
                             <rect key="frame" x="0.0" y="7" width="44" height="44"/>
@@ -48,6 +51,9 @@
                             </constraints>
                             <state key="normal" image="image_my_history"/>
                             <state key="highlighted" image="Image_my_history_click"/>
+                            <connections>
+                                <action selector="historyClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="Gen-7o-KpP"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -70,6 +76,9 @@
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <state key="highlighted" image="btn_search_clicked"/>
+                            <connections>
+                                <action selector="searchClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="Gan-nM-ozJ"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fhc-qW-dSi">
                             <rect key="frame" x="158" y="0.0" width="40" height="34"/>
@@ -79,6 +88,9 @@
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
                             <state key="normal" image="Image_scan"/>
                             <state key="highlighted" image="Image_scan_click"/>
+                            <connections>
+                                <action selector="scanClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="soE-3V-fxQ"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -93,15 +105,25 @@
                         <constraint firstAttribute="trailing" secondItem="fhc-qW-dSi" secondAttribute="trailing" id="kBX-1S-t7h"/>
                     </constraints>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ybO-D3-jhG">
+                    <rect key="frame" x="10" y="7" width="44" height="44"/>
+                    <connections>
+                        <action selector="headerClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="TZz-h6-ywz"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="ybO-D3-jhG" firstAttribute="top" secondItem="QTu-pq-zKM" secondAttribute="top" id="KXQ-Ua-sT5"/>
                 <constraint firstItem="QTu-pq-zKM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="Lf2-UF-8i7"/>
+                <constraint firstItem="ybO-D3-jhG" firstAttribute="bottom" secondItem="QTu-pq-zKM" secondAttribute="bottom" id="RZr-Uh-kzQ"/>
                 <constraint firstItem="o2O-wm-xLG" firstAttribute="leading" secondItem="ZOb-JM-L1b" secondAttribute="trailing" constant="10" id="SYh-pI-jTC"/>
                 <constraint firstItem="ZOb-JM-L1b" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="ZST-DQ-DuH"/>
                 <constraint firstAttribute="trailing" secondItem="o2O-wm-xLG" secondAttribute="trailing" id="ZdT-BL-QtX"/>
                 <constraint firstItem="o2O-wm-xLG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="aQN-iM-K6y"/>
+                <constraint firstItem="ybO-D3-jhG" firstAttribute="leading" secondItem="QTu-pq-zKM" secondAttribute="leading" id="gdL-uz-dtP"/>
                 <constraint firstItem="ZOb-JM-L1b" firstAttribute="leading" secondItem="QTu-pq-zKM" secondAttribute="trailing" constant="10" id="iZn-lb-ruF"/>
+                <constraint firstItem="ybO-D3-jhG" firstAttribute="trailing" secondItem="QTu-pq-zKM" secondAttribute="trailing" id="jyR-S6-WMp"/>
                 <constraint firstItem="QTu-pq-zKM" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="wFF-6q-lCA"/>
                 <constraint firstAttribute="bottom" secondItem="o2O-wm-xLG" secondAttribute="bottom" id="yC9-mR-SAE"/>
             </constraints>
